fix the overflow button of crasoul

--- a/frontend/src/pages/project/transaction.styles.less
+++ b/frontend/src/pages/project/transaction.styles.less
@@ -7,7 +7,8 @@
 
   .transaction-display {
     width: 100%;
-    min-height: 180px; //change height over here
+    height: 180px;
+    overflow: hidden; //change height over here
 
     // setting the basic backgoud of carousel in this
     .ant-carousel {
@@ -19,5 +20,8 @@
     }
   }
 
+  .transaction-control {
+    padding: 1em 0;
+  }
   // add other part of transaction page style over here
 }
